--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/webpack-env": "1.15.2",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
+    "crypto-js": "4.0.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
