--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "crypto-js": "4.0.0",
+    "dexie": "3.0.3",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react-hooks": "4.1.0",
